--- a/index.html
+++ b/index.html
@@ -532,7 +532,12 @@ Last update: Jan 2017
 	                      <ul type="circle">
 	                        <li><i><a href="http://www.signalprocessingsociety.org/publications/periodicals/forensics/">IEEE
 	                        Transactions on Information Forensics &
-	                        Security</a></i></li>
+	                              Security</a></i></li>
+                                                                <li><i><a href="https://www.computer.org/web/tcc">
+                                      IEEE Transactions on Cloud
+                                      Computing
+                                </a></i></li>
+
                                 <li><i><a href="http://onlinelibrary.wiley.com/journal/10.1002/%28ISSN%291939-0122">
                                       Security and Communication
                                       Networks
@@ -544,7 +549,7 @@ Last update: Jan 2017
                                 </a></i></li>
 	                        <li><i><a href="http://ees.elsevier.com/jisa/">Journal
 	                        of Information Security and
-	                        Applications</a></i></li>
+	                              Applications</a></i></li>
 	                      </ul>
 	                    </li>
 
@@ -584,7 +589,8 @@ Last update: Jan 2017
                                <a href="http://www.ics.forth.gr/esorics2016/">ESORICS 2016</a>;
                                <a href="http://www.wistp.org/">WISTP 2016</a>;
                                <a href="http://eurosys2017.org">EuroSys 2017</a>;
-                               <a href="http://asiaccs2017.com/">AsiaCCS2017</a>.
+                               <a href="http://asiaccs2017.com/">AsiaCCS2017</a>;
+                               <a href="http://asiaccs2017.com/">DSN2017</a>.
                              </p>
                            </i>                          
 	                        <br>
