--- a/index.html
+++ b/index.html
@@ -569,7 +569,7 @@ Last update: Jan 2017
                                  2013</a>;
                                
                                <a href="http://acns2014.epfl.ch/">ACNS
-                                 2014</a>;                            
+                                 2014</a>;
 		                           <a href="http://www.ensa.ac.ma/sec2014/"> SEC 2014</a>;
                              </p>
                              <p>
@@ -580,9 +580,9 @@ Last update: Jan 2017
                                <a href="http://icsd.i2r.a-star.edu.sg/asiaccs15/"> ASIACCS 2015</a>;
                              </p>
                              <p>
-                               <a href="https://ifipsec.org/2015/"> IFIP SEC 2015</a>;
+                               <a href="ifipsec.org/2015/"> IFIP SEC 2015</a>;
                                <a href="http://www.ieee-security.org/TC/EuroSP2016/"> IEEE Euro S&P 2016</a>;
-                               <a href="https://ifipsec.org/2016/">IFIP SEC 2016</a>;
+                               <a href="ifipsec.org/2016/">IFIP SEC 2016</a>;
                                <a href="https://distrinet.cs.kuleuven.be/events/essos/2016/">ESSoS 2016</a>;
                              </p>
                              <p>
@@ -590,7 +590,11 @@ Last update: Jan 2017
                                <a href="http://www.wistp.org/">WISTP 2016</a>;
                                <a href="http://eurosys2017.org">EuroSys 2017</a>;
                                <a href="http://asiaccs2017.com/">AsiaCCS2017</a>;
-                               <a href="http://asiaccs2017.com/">DSN2017</a>.
+                               <a href="https://dsn2017.github.io/">DSN2017</a>;
+                             </p>
+                             <p>
+                               <a href="ifipsec.org/2017/">IFIP SEC2017</a>.
+                               
                              </p>
                            </i>                          
 	                        <br>
