updated conference ranking link

--- a/index.html
+++ b/index.html
@@ -746,7 +746,7 @@ Last update: Jan 2017
                           Scholar
                           Metrics</a>, <a href="https://academic.microsoft.com/#/news/38652104?nte=3&nts=0">
                           Microsoft Academic Search
-                          </a>, or <a href="http://icsd.i2r.a-star.edu.sg/staff/jianying/conference-ranking.html"> CIF-based ranking
+                          </a>, or <a href="http://jianying.space/conference-ranking.html"> CIF-based ranking
                            </a>
 
                       </li>
