added room booking system

--- a/index.html
+++ b/index.html
@@ -755,6 +755,9 @@ Last update: Jan 2017
                           An Automatic Crypto Research Topic or Paper Title Generator </a></li>
                       
                       <li><a href="http://pdos.csail.mit.edu/scigen/">SCIgen - An Automatic CS Paper Generator </a> </li>
+		      <li><a href="
+		      https://archibus.uni.lux/archibus/schema/ab-core/views/process-navigator/navigator-details.axvw">UoLux
+		      Room booking system</a></li>
                           </ul>
 
                     </font>
