updated calander of events

--- a/index.html
+++ b/index.html
@@ -736,9 +736,13 @@ Last update: Jan 2017
 
                       <li> <a href="http://afnom.github.io/"> The University of Birmingham Hacking Club</a></li>
 
-                      <li><a href="http://www.confsearch.org/confsearch/faces/pages/topic.jsp?topic=Security&sortMode=1&graphicView=1">
-                          The Security Privacy and Cryptography
-                          related events </a></li>
+                      <li> Calendar of events in the Security,
+                          Privacy, and Cryptography,
+                          from <br><a href="http://www.confsearch.org/confsearch/faces/pages/topic.jsp?topic=Security&sortMode=1&graphicView=1">Confsearch</a>,
+                        <a href="https://www.iacr.org/events/">IACR</a>, and <a href="http://www.uclouvain.be/crypto/callforpapers/forthcoming">
+                          UCL Crypto Group
+                        </a>
+                      </li>
                       
                       <li>
                           Top Crypto and Security Conferences Ranking
