--- a/index.html
+++ b/index.html
@@ -1336,10 +1336,10 @@ Last update: Jan 2017
                                 &nbsp &nbsp &nbsp &nbsp E02 0245-280
                                 (room), <br> &nbsp &nbsp &nbsp &nbsp
                                 University of Luxembourg, <br> &nbsp
-                                &nbsp &nbsp &nbsp 2 Avenue de
-                                l'Université, L-4365,<br> &nbsp &nbsp
-                                &nbsp &nbsp
-                                Esch-sur-Alzette, Luxembourg.  </p>
+                                &nbsp &nbsp &nbsp 6, Avenue de la
+                                Fonte, L-4365,<br> &nbsp &nbsp &nbsp
+                                &nbsp Esch-sur-Alzette,
+                                Luxembourg.  </p>
                     </div>
                     
                       <div class="container">
