--- a/index.html
+++ b/index.html
@@ -697,7 +697,11 @@ Last update: Jan 2017
                       
 	                    <li><b>Other Awards:</b><br>
 	                      <ul type="circle">
-                                <li>First place award, the Coniston poster competition, University of
+                                <li> Chinese Government Award For
+                                Outstanding PhD Scholar Abroad,
+                                2016.</li>
+                                <li>First place award, the Coniston
+                                  poster competition, University of
                                   Birmingham, UK, 2014.</li>
                                 <li>Outstanding Graduates of Heilongjiang Province, Heilongjiang,
                                   China, 2009;</li>
