--- a/index.html
+++ b/index.html
@@ -502,12 +502,23 @@ Last update: Jan 2017
                             storage (Or, how to store a long-term
                             secret online)", 2016.
                           </li>
+                          <li>
+                            Kevin Milner, Cas Cremers, Jiangshan Yu,
+                            Mark
+                            Ryan. <a href="doc/paper/AutoDetect.pdf">"Automatically
+                            Detecting the Misuse of Secrets:
+                            Foundations, Design Principles, and
+                            Applications""</a>. <i> IACR Cryptology
+                            ePrint Archive 2017: 234
+                            </i>
+                          </li>
                               </ul>
                       </li>
                     </ul>
 
                           <!-- Kevin, Cas, JS, and Mark, Detecting the
-                         Misuse of Secrets:\\Foundations and Protocols-->
+                         Misuse of Secrets:\\Foundations and
+                         Protocols-->
                       <br>
 
                     <br>
