--- a/index.html
+++ b/index.html
@@ -497,10 +497,9 @@ Last update: Jan 2017
                            Networks", 2015.
                          </li>
                           <li>
-                            Jiangshan Yu, Mark Ryan and Liqun Chen. "A
-                            self-healing scheme for distributed
-                            storage (Or, how to store a long-term
-                            secret online)", 2016.
+                            Jiangshan Yu, Mark Ryan and Liqun
+                            Chen. <a href="doc/paper/AuthCompStorage">"Authenticating
+                            compromisable storage systems"</a>, 2016.
                           </li>
                           <li>
                             Kevin Milner, Cas Cremers, Jiangshan Yu,
