--- a/index.html
+++ b/index.html
@@ -498,7 +498,7 @@ Last update: Jan 2017
                          </li>
                           <li>
                             Jiangshan Yu, Mark Ryan and Liqun
-                            Chen. <a href="doc/paper/AuthCompStorage">"Authenticating
+                            Chen. <a href="doc/paper/AuthCompStorage.pdf">"Authenticating
                             compromisable storage systems"</a>, 2016.
                           </li>
                           <li>
