--- a/index.html
+++ b/index.html
@@ -437,6 +437,13 @@ Last update: Jan 2017
                         for Big Data and the Cloud</i>, 2017. (To
                         appear as a book chapter)
                           </li>
+                          <li>Marcus Völp, Francisco Rocha, Jérémie
+                          Decouchant, Jiangshan Yu and Paulo
+                          Verissimo.<br> <b> "Permanent Reencryption:
+                          How to Survive Generations of Cryptanalysts
+                          to Come"</b>.<br> <i>Security Protocols
+                          XXV</i>, 2017. (To appear)</li>
+                          
                         </ul>
                       </li>
 
