--- a/index.html
+++ b/index.html
@@ -45,8 +45,8 @@ Last update: Jan 2017
                                 <span class="icon-bar"></span>
                                 </button>
                                 <a href="index.html"
-                                class="navbar-brand"><img style="width: 16vw;
-                                height: 5vw;" src="images/js_logo_en.png"
+                                class="navbar-brand"><img style="width: 246px;
+                                height: 70px;" src="images/js_logo_en.png"
                                 alt="Jiangshan Yu"
                                 title="Jiangshan Yu" /></a>
                         </div>
@@ -154,8 +154,8 @@ Last update: Jan 2017
                                <br>
                                <br>
                                ---------------------------------------------------<br><br>
-                               <img style="width: 10%; height:
-                                10%;"src="images/news.png" alt="icon"></p>
+                               <img style="width: 80px; height:
+                                60px;"src="images/news.png" alt="icon"></p>
                                 <ul style="margin-left: 37%; margin-right: 5%; margin-top: -6%; margin-bottom: 
 6px">
 
@@ -208,8 +208,8 @@ Last update: Jan 2017
                         <div class="templatemo-service-item">
                             <div>
                                <a href="#templatemo-research" style="color: black">
-                                <img style="width: 4.5vw; height:
-                                4.5vw;"src="images/shu.png" alt="icon" />
+                                <img style="width: 65px; height:
+                                65px;"src="images/shu.png" alt="icon" />
                                 <span class="templatemo-service-item-header">Research</span>
                                 </a>
                             </div>
@@ -236,7 +236,7 @@ Last update: Jan 2017
                             <div>
                                <a href="#templatemo-wu" style="color: black">
                                  <img style="width:
-                                4.5vw; height: 4.5vw;" src="images/wu.png"
+                                65px; height: 65px;" src="images/wu.png"
                                 alt="icon"/>
                                 <span class="templatemo-service-item-header">Martial Arts</span>
                                 </a>
@@ -259,8 +259,8 @@ Last update: Jan 2017
                         <div class="templatemo-service-item">
                             <div>
                               <a href="#templatemo-biz" style="color: black">
-                                <img style="width: 4.5vw; height:
-                                4.5vw;"src="images/biz.png" alt="icon"/>
+                                <img style="width: 65px; height:
+                                65px;"src="images/biz.png" alt="icon"/>
                                 <span class="templatemo-service-item-header">Business</span>
                                 </a>
                             </div>
@@ -301,8 +301,8 @@ Last update: Jan 2017
                     <div class="col-md-1">
                         <div class="templatemo-service-item">
                             <div>
-                                <img style="width: 4.5vw; height:
-                                4.5vw;margin-left:2vw"src="images/shu.png" alt="icon" />
+                                <img style="width: 65px; height:
+                                65px;margin-left:2vw"src="images/shu.png" alt="icon" />
                                 <span class="templatemo-service-item-header" style="margin-left:2px">Research</span>
                             </div>
                             <br class="clearfix"/>
@@ -829,8 +829,8 @@ Last update: Jan 2017
                               <div class="col-md-2">
                                 <div class="templatemo-service-item">
                                   <div>
-                                    <img style="width: 4.5vw; height:
-                                                4.5vw;margin-left:20px"src="images/wu.png" alt="icon" />
+                                    <img style="width: 65px; height:
+                                                65px;margin-left:20px"src="images/wu.png" alt="icon" />
                                     <span class="templatemo-service-item-header">Martial Arts</span>
                             </div>
                             <br class="clearfix"/>
@@ -901,8 +901,8 @@ Last update: Jan 2017
                               <div class="col-md-2">
                                 <div class="templatemo-service-item">
                                   <div>
-                                    <img style="width: 4.5vw; height:
-                                                4.5vw;margin-left:20px"src="images/biz.png" alt="icon" />
+                                    <img style="width: 65px; height:
+                                                65px;margin-left:20px"src="images/biz.png" alt="icon" />
                                     <span class="templatemo-service-item-header" style="margin-left:2px">BUSINESS</span>
                             </div>
                             <br class="clearfix"/>
