--- a/index.html
+++ b/index.html
@@ -141,6 +141,12 @@ http://www.templatemo.com/tm-395-urbanic
                     </div>
                     <div class="col-lg-offset-5 JYuinfo_right">
                       <ul style="margin-bottom:6px">
+
+                                 <li>[2017-04-21] A
+                                  paper on "Authenticating
+                            compromisable storage systems"
+                                  has been accepted by the 16<sup>th</sup> IEEE TrustCom,
+                                  2017.</li>
                                  <li> [2017-04-30] I have been awarded
                                   for the
                                   ``<a href="https://en.wikipedia.org/wiki/Chinese_government_award_for_outstanding_self_finance_students_abroad">Chinese
@@ -149,7 +155,6 @@ http://www.templatemo.com/tm-395-urbanic
                                   the <a href="http://wwwen.uni.lu/snt/news_events/chinese_government_award_fans_the_flames_for_snt_researcher">news
                                      press</a>.
                                  </li>
-                                 <br>
                                  <li>[2017-04-21] A
                                   paper on "Automatically Detecting
                                   the Misuse of Secrets: Foundations,
@@ -393,28 +398,44 @@ http://www.templatemo.com/tm-395-urbanic
 
 	                    <li><b>Conference:</b><br>
 	                      <ul type="circle">
-                          <li>Jiangshan Yu, Guilin Wang, and Yi
-                          Mu. <br><a href="doc/paper/TrustCom2012.pdf"><b>"Provably
-                          Secure Single Sign-on Scheme in Distributed Systems
-                          and Networks"</b></a>. <br><i>IEEE TrustCom</i>,
-                          pp. 271-278, 2012</li>
-                          <li>Jiangshan Yu and Mark
-                          Ryan.<br> <a href="doc/paper/SPW-2015.pdf"><b>
-                          "Device attacker models: fact and
-                          fiction"</b></a>.<br> <i>Security Protocols
-                              XXIII</i>, pp. 158-167, 2015.</li>
+                          <li>
+                            Kevin Milner, Cas Cremers, Jiangshan Yu,
+                            Mark Ryan. <br> <a href="doc/paper/AutoDetect.pdf"><b>"Automatically
+                            Detecting the Misuse of Secrets:
+                            Foundations, Design Principles, and
+                            Applications"</b></a>. <br> <i> IEEE CSF 2017. (To appear)
+                            </i>
+                          </li>
+
+                          <li>
+                            Jiangshan Yu, Mark Ryan and Liqun
+                            Chen. <br> <a href="doc/paper/AuthCompStorage.pdf"><b>"Authenticating
+                            compromisable storage systems"</b></a>, <br>IEEE TrustCom 2017. (To appear)
+                          </li>
+
+                          <li>Marcus Völp, Francisco Rocha, Jérémie
+                          Decouchant, Jiangshan Yu and Paulo
+                          Verissimo.<br> "Permanent Reencryption:
+                          How to Survive Generations of Cryptanalysts
+                          to Come".<br> <i>Security Protocols
+                              XXV</i>, 2017. (To appear)</li>
+
                           <li>
                         Jiangshan Yu and Mark Ryan.<br> <a href="doc/paper/PKI.pdf"><b>"Evaluating web PKIs"</b></a>.<br> <i>Software Architecture
                         for Big Data and the Cloud</i>, 2017. (To
                         appear as a book chapter)
                           </li>
-                          <li>Marcus Völp, Francisco Rocha, Jérémie
-                          Decouchant, Jiangshan Yu and Paulo
-                          Verissimo.<br> <b> "Permanent Reencryption:
-                          How to Survive Generations of Cryptanalysts
-                          to Come"</b>.<br> <i>Security Protocols
-                          XXV</i>, 2017. (To appear)</li>
-                          
+
+                          <li>Jiangshan Yu and Mark
+                          Ryan.<br> <a href="doc/paper/SPW-2015.pdf"><b>
+                          "Device attacker models: fact and
+                          fiction"</b></a>.<br> <i>Security Protocols
+                              XXIII</i>, pp. 158-167, 2015.</li>
+                          <li>Jiangshan Yu, Guilin Wang, and Yi
+                          Mu. <br><a href="doc/paper/TrustCom2012.pdf"><b>"Provably
+                          Secure Single Sign-on Scheme in Distributed Systems
+                          and Networks"</b></a>. <br><i>IEEE TrustCom</i>,
+                          pp. 271-278, 2012</li>
                         </ul>
                       </li>
 
@@ -468,27 +489,12 @@ http://www.templatemo.com/tm-395-urbanic
                         code</a>)
                         </li>
 
-                         <li>
-                           Jiangshan Yu, Guilin Wang, and Yi
-                           Mu. "Efficient and Provably Secure Single
-                           Sign-on Schemes in Distributed Systems and
-                           Networks", 2015.
-                         </li>
-                          <li>
-                            Jiangshan Yu, Mark Ryan and Liqun
-                            Chen. <a href="doc/paper/AuthCompStorage.pdf">"Authenticating
-                            compromisable storage systems"</a>, 2016.
-                          </li>
-                          <li>
-                            Kevin Milner, Cas Cremers, Jiangshan Yu,
-                            Mark
-                            Ryan. <a href="doc/paper/AutoDetect.pdf">"Automatically
-                            Detecting the Misuse of Secrets:
-                            Foundations, Design Principles, and
-                            Applications""</a>. <i> IACR Cryptology
-                            ePrint Archive 2017: 234
-                            </i>
-                          </li>
+                         <!-- <li> -->
+                         <!--   Jiangshan Yu, Guilin Wang, and Yi -->
+                         <!--   Mu. "Efficient and Provably Secure Single -->
+                         <!--   Sign-on Schemes in Distributed Systems and -->
+                         <!--   Networks", 2015. -->
+                         <!-- </li> -->
                               </ul>
                       </li>
                     </ul>
