--- a/index.html
+++ b/index.html
@@ -548,7 +548,7 @@ http://www.templatemo.com/tm-395-urbanic
 
                       <br>
                       
-	                    <li><b>SubReviewer (Conference):</b><br>
+	                    <li><b>External Reviewer (Conference):</b><br>
 	                      <ul type="circle">
                            <i>
                              <p>
@@ -586,8 +586,9 @@ http://www.templatemo.com/tm-395-urbanic
                                <a href="https://dsn2017.github.io/">DSN2017</a>;
                              </p>
                              <p>
-                               <a href="ifipsec.org/2017/">IFIP SEC2017</a>.
-                               
+                               <a href="ifipsec.org/2017/">IFIP SEC2017</a>;
+                               <a href="https://www.ntnu.edu/esorics2017">ESORICS
+                               2017</a>.
                              </p>
                            </i>                          
 	                        <br>
