--- a/index.html
+++ b/index.html
@@ -151,7 +151,8 @@ http://www.templatemo.com/tm-395-urbanic
                                   for the
                                   ``<a href="https://en.wikipedia.org/wiki/Chinese_government_award_for_outstanding_self_finance_students_abroad">Chinese
                                   Government Award for outstanding PhD
-                                  scholar abroad</a>''. Here is
+                                  scholar abroad</a>''. The success
+                                  rate is 3% in UK and <3% worldwide. Here is
                                   the <a href="http://wwwen.uni.lu/snt/news_events/chinese_government_award_fans_the_flames_for_snt_researcher">news
                                      press</a>.
                                  </li>
