--- a/index.html
+++ b/index.html
@@ -131,7 +131,10 @@ http://www.templatemo.com/tm-395-urbanic
                           applications.
                           <br><br>
                           Currently, I’m working on the public-ledger-based applications (e.g. crypto-currency and blockchain technology), IoT security (e.g. key management, device authentication, and secure communication), and post compromise security (e.g. detecting the compromise of secret keys and devices).
-                          <br>
+                          <br> <br> I am also available for
+                          consultancy,
+                          please <a href="#templatemo-contact">contact </a>
+                          me for more detail.
                           <br>
                           <br>
                           <br>
@@ -152,7 +155,7 @@ http://www.templatemo.com/tm-395-urbanic
                                   ``<a href="https://en.wikipedia.org/wiki/Chinese_government_award_for_outstanding_self_finance_students_abroad">Chinese
                                   Government Award for outstanding PhD
                                   scholar abroad</a>''. The success
-                                  rate is 3% in UK and <3% worldwide. Here is
+                                  rate is 3% in UK and 1% worldwide. Here is
                                   the <a href="http://wwwen.uni.lu/snt/news_events/chinese_government_award_fans_the_flames_for_snt_researcher">news
                                      press</a>.
                                  </li>
