--- a/index.html
+++ b/index.html
@@ -132,7 +132,7 @@ http://www.templatemo.com/tm-395-urbanic
                           <br><br>
                           Currently, I’m working on the public-ledger-based applications (e.g. crypto-currency and blockchain technology), IoT security (e.g. key management, device authentication, and secure communication), and post compromise security (e.g. detecting the compromise of secret keys and devices).
                           <br> <br> I am also available for
-                          consultancy,
+                          consultancy services,
                           please <a href="#templatemo-contact">contact </a>
                           me for more detail.
                           <br>
