--- a/index.html
+++ b/index.html
@@ -90,10 +90,11 @@ http://www.templatemo.com/tm-395-urbanic
                       <div class="templatemo-service-item">
                         <!-- <div class= "col-lg-push-12 JYuinfo_right"> -->
                         <!-- <div class= "col-sm-12 col-md-2 templatemo-partner-item"> -->
-                          <img style="width: 310px; height: 360px;"
-                              src="images/profile.png"
+                        <br>
+                          <img style="width: 310px; height: 230px;"
+                              src="images/J-Yu.jpg"
                                alt="icon">
-                        <!-- </div> -->
+                          <!-- </div> -->
                         <br class="clearfix"/>
                       </div>
                       <div class="clearfix"></div>
@@ -129,10 +130,19 @@ http://www.templatemo.com/tm-395-urbanic
                           authentication, post compromise
                           security, and public-ledger-based
                           applications.
-                          <br><br>
-                          Currently, I’m working on the public-ledger-based applications (e.g. crypto-currency and blockchain technology), IoT security (e.g. key management, device authentication, and secure communication), and post compromise security (e.g. detecting the compromise of secret keys and devices).
-                          <br> <br> I am also available for
-                          consultancy services,
+                          <br><br> Currently, I’m working on the
+                          public-ledger-based applications
+                          (e.g. crypto-currency and blockchain
+                          technology), IoT security (e.g. key
+                          management, device authentication, and
+                          secure communication), and post compromise
+                          security (e.g. detecting the compromise of
+                          secret keys and devices).
+                         <br>
+                         <br>
+
+                          I am also available for consultancy
+                          services,
                           please <a href="#templatemo-contact">contact </a>
                           me for more detail.
                           <br>
