--- a/index.html
+++ b/index.html
@@ -95,6 +95,8 @@ http://www.templatemo.com/tm-395-urbanic
                               src="images/J-Yu.jpg"
                                alt="icon">
                           <!-- </div> -->
+                          <br>
+                          <br><br><br>
                         <br class="clearfix"/>
                       </div>
                       <div class="clearfix"></div>
@@ -120,24 +122,23 @@ http://www.templatemo.com/tm-395-urbanic
                                 Science</a>, <a href="http://www.birmingham.ac.uk/">University
                             of Birmingham</a>, UK, where I
                           received my PhD in computer
-                          science.
-
+                          science.<br><br>
                           I am interested in cyber security and
-                          cryptography. In particular, the focus
-                          of my research has been on design and
-                          analysis of cryptographic protocols,
-                          cryptographic key management, secure
-                          authentication, post compromise
-                          security, and public-ledger-based
-                          applications.
-                          <br><br> Currently, I’m working on the
-                          public-ledger-based applications
-                          (e.g. crypto-currency and blockchain
-                          technology), IoT security (e.g. key
-                          management, device authentication, and
-                          secure communication), and post compromise
-                          security (e.g. detecting the compromise of
-                          secret keys and devices).
+                          cryptography. In particular, the focus of my
+                          research has been on design and analysis of
+                          cryptographic protocols, cryptographic key
+                          management, secure authentication, post
+                          compromise security, and public-ledger-based
+                          applications.<br><br>
+
+                          My research impact includes patent-pending
+                          public ledger applications that have
+                          attracted funding support from Innovate UK;
+                          and I've co-designed a secure booting
+                          solution for Huawei Ltd, the largest
+                          telecommunications equipment manufacturer in
+                          the world, to manage their next generation
+                          network devices securely.
                          <br>
                          <br>
 
