--- a/index.html
+++ b/index.html
@@ -370,21 +370,33 @@ http://www.templatemo.com/tm-395-urbanic
                               &nbsp;&nbsp;&nbsp;&nbsp;(My <a href="https://scholar.google.co.uk/citations?user=-1C1IIcAAAAJ&hl=
                               en"> <b>Google scholar</b></a>
                               and <a href="http://dblp.uni-trier.de/pers/hd/y/Yu:Jiangshan">
-                              <b>DBLP</b></a> page.)
-
+  <b>DBLP</b></a> page.)
+<br><br>
 	                  <ul type="square"; style="margin-bottom:
                                                     6px">
+	                    <li><b>Book Chapter:</b><br>
+                        <ul type="circle">
+                          <li>
+                        Jiangshan Yu and Mark
+                        Ryan.<br> <a href="doc/paper/PKI.pdf"><b>"Evaluating
+                        web PKIs"</b></a>.<br> <i>Software
+                        Architecture for Big Data and the Cloud</i>,
+                        1st Edition, Chapter 7, June 2017.
+                          </li>
+                        </ul>
+                        </li>
+<br>
 	                    <li><b>Journal:</b><br>
                         <ul type="circle">
-                          <li>Guilin Wang, Jiangshan Yu, Qi
-                          Xie. <br><a href="doc/paper/TII-2013.pdf"><b>"Security
-                          Analysis of A Single Sign-On Mechanism for
-                          Distributed Computer
-                          Networks"</a></b>.<br> <i>IEEE Transactions
-                          on Industrial Informatics</i>, Vol.9, No.1,
-                          pp.294-302, 2013.
-                          </li>
-
+                          <li>
+                            Jiangshan Yu, Vincent Cheval, and Mark
+                            Ryan. <br><a href="doc/paper/DTKI.pdf"><b>"DTKI:
+                            a new formalized PKI with verifiable
+                            trusted parties"</b></a>. <br><i> The
+                            computer Journal </i>, Vol. 59 No. 11,
+                            pp. 1695-1713,
+                            2016.(<a href="doc/paper/DTKI-proof.zip">Tamarin code</a>) 
+                        </li>
                           <li>
                             Jiangshan Yu, Guilin Wang, Yi Mu, and Wei
                             Gao.<br> <a href="doc/paper/TIFS-2014.pdf"><b>"An
@@ -396,17 +408,14 @@ http://www.templatemo.com/tm-395-urbanic
                             Security (TIFS)</i>, Vol.9, No.12 ,
                             pp. 2302-2313, 2014.
                           </li>
-                          <li>
-                            Jiangshan Yu, Vincent Cheval, and Mark
-                            Ryan. <br><a href="doc/paper/DTKI.pdf"><b>"DTKI:
-                            a new formalized PKI with verifiable
-                            trusted parties"</b></a>. <br><i> The
-                            computer Journal </i>, Vol. 59 No. 11,
-                            pp. 1695-1713,
-                            2016.(<a href="doc/paper/DTKI-proof.zip">Tamarin code</a>) 
-                        </li>
-
-
+                          <li>Guilin Wang, Jiangshan Yu, Qi
+                          Xie. <br><a href="doc/paper/TII-2013.pdf"><b>"Security
+                          Analysis of A Single Sign-On Mechanism for
+                          Distributed Computer
+                          Networks"</a></b>.<br> <i>IEEE Transactions
+                          on Industrial Informatics</i>, Vol.9, No.1,
+                          pp.294-302, 2013.
+                          </li>
                         </ul>
 
                         <br>
@@ -434,12 +443,6 @@ http://www.templatemo.com/tm-395-urbanic
                           How to Survive Generations of Cryptanalysts
                           to Come".<br> <i>Security Protocols
                               XXV</i>, 2017. (To appear)</li>
-
-                          <li>
-                        Jiangshan Yu and Mark Ryan.<br> <a href="doc/paper/PKI.pdf"><b>"Evaluating web PKIs"</b></a>.<br> <i>Software Architecture
-                        for Big Data and the Cloud</i>, 2017. (To
-                        appear as a book chapter)
-                          </li>
 
                           <li>Jiangshan Yu and Mark
                           Ryan.<br> <a href="doc/paper/SPW-2015.pdf"><b>
